--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>MyPa - My Personal Assistant</title>
   <script src="styles.js"></script>
   <link rel="manifest" href="manifest.json" />
+  <!-- Injection placeholder -->
+  <script>
+    window.authorizedSitesFromEnv = "${AUTHORIZED_SITES}";
+  </script>
 </head>
 <body>
   <div class="sidebar">
@@ -19,13 +23,16 @@
       <button data-screens="2">2 Screens</button>
       <button data-screens="3">3 Screens</button>
       <button data-screens="4">4 Screens</button>
-      <button data-screens="20">20 Screens</button>      
+      <button data-screens="20">20 Screens</button>
       <button id="clear-cache-btn">Clear Cache</button>
     </div>
   </div>
   <div class="main" id="main-content">
     <!-- Screens will be generated here -->
   </div>
+  <!-- Include db.js script -->
+  <script src="db.js"></script>
+  <!-- Main script -->
   <script src="main.js"></script>
 </body>
 </html>
