--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyPa - My Personal Assistant</title>
+  <script defer src="https://analytics.kahiether.com/script.js" data-website-id="a830019f-f58f-4b4e-b241-e4c29b62a12a"></script>
   <script src="styles.js"></script>
   <link rel="manifest" href="manifest.json" />
   <!-- Injection placeholder: will be replaced by your server -->
