--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyPa - My Personal Assistant</title>
   <script defer src="https://analytics.kahiether.com/script.js" data-website-id="a830019f-f58f-4b4e-b241-e4c29b62a12a"></script>
+  <script defer src="https://kizuna.kahiether.com/main.js?website-url=https://yoursite.com&personalinfostored=no&enablemdquizz=yes&enablejssandbox=yes&enableprivacy=yes"></script>
   <script src="styles.js"></script>
   <link rel="manifest" href="manifest.json" />
   <!-- Injection placeholder: will be replaced by your server -->
