--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <button data-screens="3">3 Screens</button>
       <button data-screens="4">4 Screens</button>
       <button data-screens="20">20 Screens</button>
+      <button data-screens="100">100 Screens</button>
+      <button data-screens="1000">1000 Screens</button>
       <button id="clear-cache-btn">Clear Cache</button>
     </div>
   </div>
